deploy/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: flask
spec:
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: flask
  type: ClusterIP
